# comonad

./: .hlint.yaml  .travis.yml  CHANGELOG.markdown  CHANGELOG.md  Control-Comonad-Env-Class.html  Control-Comonad-Env.html  Control-Comonad-Hoist-Class.html  Control-Comonad-Identity.html  Control-Comonad-Store-Class.html  Control-Comonad-Store.html  Control-Comonad-Traced-Class.html  Control-Comonad-Traced.html  Control-Comonad-Trans-Class.html  Control-Comonad-Trans-Env.html  Control-Comonad-Trans-Identity.html  Control-Comonad-Trans-Store.html  Control-Comonad-Trans-Traced.html  Control-Comonad.html  Data-Functor-Composition.html  Data-Functor-Coproduct.html  HLint.hs  LICENSE  LICENSE.md  README.markdown  README.md  Setup.lhs  cabal.haskell-ci  comonad.cabal  comonad.haddock  doc-index.html  index-frames.html  index.html  mini_Control-Comonad-Trans-Identity.html  mini_Control-Comonad.html
.github/workflows/: haskell-ci.yml
Control/: Comonad.hs
Control/Arrow/: Cokleisli.hs
Control/Comonad/: Stream.hs  Zip.hs
Data/: Distributive.hs
Data/Array/: Pointed.hs
Data/Functor/: Extend.hs
examples/: Array.hs  History.hs  comonad-examples.cabal
src/: Control-Comonad-Env-Class.html  Control-Comonad-Env.html  Control-Comonad-Hoist-Class.html  Control-Comonad-Identity.html  Control-Comonad-Store-Class.html  Control-Comonad-Store.html  Control-Comonad-Traced-Class.html  Control-Comonad-Traced.html  Control-Comonad-Trans-Class.html  Control-Comonad-Trans-Env.html  Control-Comonad-Trans-Identity.html  Control-Comonad-Trans-Store.html  Control-Comonad-Trans-Traced.html  Control-Comonad.html  Data-Functor-Composition.html  Data-Functor-Coproduct.html
src/Control/: Comonad.hs
src/Control/Comonad/: Env.hs  Identity.hs  Store.hs  Traced.hs
src/Control/Comonad/Env/: Class.hs
src/Control/Comonad/Hoist/: Class.hs
src/Control/Comonad/Store/: Class.hs
src/Control/Comonad/Traced/: Class.hs
src/Control/Comonad/Trans/: Class.hs  Cofree.hs  Env.hs  Identity.hs  Store.hs  Traced.hs
src/Data/Functor/: Composition.hs  Coproduct.hs
src/Data/Functor/Extend/Trans/: Maybe.hs
tests/: doctests.hsc
