name:          comonad
category:      Control, Comonads
version:       4.2.4
license:       BSD3
cabal-version: >= 1.10
license-file:  LICENSE
author:        Edward A. Kmett
maintainer:    Edward A. Kmett <ekmett@gmail.com>
stability:     provisional
homepage:      http://github.com/ekmett/comonad/
bug-reports:   http://github.com/ekmett/comonad/issues
copyright:     Copyright (C) 2008-2014 Edward A. Kmett,
               Copyright (C) 2004-2008 Dave Menendez
synopsis:      Comonads
description:   Comonads
build-type:    Custom
extra-source-files:
  .ghci
  .gitignore
  .travis.yml
  .vim.custom
  coq/Store.v
  README.markdown
  CHANGELOG.markdown
  examples/History.hs
  HLint.hs

-- You can disable the doctests test suite with -f-test-doctests
flag test-doctests
  default: True
  manual: True

flag containers
  description:
    You can disable the use of the `containers` package using `-f-containers`.
    .
    Disabing this is an unsupported configuration, but it may be useful for accelerating builds in sandboxes for expert users.
  default: True
  manual: True

flag contravariant
  description:
    You can disable the use of the `contravariant` package using `-f-contravariant`.
    .
    Disabling this is an unsupported configuration, but it may be useful for accelerating builds in sandboxes for expert users.
    .
    If disabled we will not supply instances of `Contravariant`
    .
  default: True
  manual: True

flag distributive
  description:
    You can disable the use of the `distributive` package using `-f-distributive`.
    .
    Disabling this is an unsupported configuration, but it may be useful for accelerating builds in sandboxes for expert users.
    .
    If disabled we will not supply instances of `Distributive`
    .
  default: True
  manual: True


source-repository head
  type: git
  location: git://github.com/ekmett/comonad.git

library
  hs-source-dirs: src
  default-language: Haskell2010
  other-extensions: CPP
  ghc-options: -Wall

  build-depends:
    base                >= 4       && < 5,
    semigroups          >= 0.8.3.1 && < 1,
    tagged              >= 0.1     && < 1,
    transformers        >= 0.2     && < 0.5,
    transformers-compat >= 0.3     && < 1

  if flag(containers)
    build-depends: containers >= 0.3 && < 0.6

  if flag(contravariant)
    build-depends: contravariant >= 0.2.0.1 && < 2

  if flag(distributive)
    build-depends: distributive >= 0.2.2   && < 1 

  exposed-modules:
    Control.Comonad
    Control.Comonad.Env
    Control.Comonad.Env.Class
    Control.Comonad.Hoist.Class
    Control.Comonad.Identity
    Control.Comonad.Store
    Control.Comonad.Store.Class
    Control.Comonad.Traced
    Control.Comonad.Traced.Class
    Control.Comonad.Trans.Class
    Control.Comonad.Trans.Env
    Control.Comonad.Trans.Identity
    Control.Comonad.Trans.Store
    Control.Comonad.Trans.Traced
    Data.Functor.Composition
    Data.Functor.Coproduct

  default-extensions: CPP
  other-extensions:
    RankNTypes
    MultiParamTypeClasses
    FunctionalDependencies
    FlexibleInstances
    UndecidableInstances

test-suite doctests
  type:           exitcode-stdio-1.0
  default-language: Haskell2010
  main-is:        doctests.hs
  ghc-options:    -Wall -threaded
  hs-source-dirs: tests

  if !flag(test-doctests)
    buildable: False
  else
    build-depends:
      base,
      directory      >= 1.0,
      doctest        >= 0.9.10,
      filepath

  if impl(ghc<7.6.1)
    ghc-options: -Werror
