cabal-version: 2.2
name:          comonad
category:      Control, Comonads
version:       6
license:       BSD-2-Clause OR Apache-2.0
license-file:  LICENSE.md
author:        Edward A. Kmett
maintainer:    Edward A. Kmett <ekmett@gmail.com>
stability:     provisional
homepage:      http://github.com/ekmett/comonad/
bug-reports:   http://github.com/ekmett/comonad/issues
copyright:     Copyright (C) 2008-2014 Edward A. Kmett,
               Copyright (C) 2004-2008 Dave Menendez
synopsis:      Comonads
description:   Comonads.
build-type:    Simple
tested-with:   GHC == 8.6.5
             , GHC == 8.8.4
             , GHC == 8.10.7
             , GHC == 9.0.2
             , GHC == 9.2.8
             , GHC == 9.4.5
             , GHC == 9.6.2
extra-source-files:
  .gitignore
  .hlint.yaml
  .vim.custom
  coq/Store.v
  README.md
  CHANGELOG.md
  examples/History.hs

flag containers
  description:
    You can disable the use of the `containers` package using `-f-containers`.
    .
    Disabing this is an unsupported configuration, but it may be useful for accelerating builds in sandboxes for expert users.
  default: True
  manual: True

flag indexed-traversable
  description:
    You can disable the use of the `indexed-traversable` package using `-f-indexed-traversable`.
    .
    Disabling this is an unsupported configuration, but it may be useful for accelerating builds in sandboxes for expert users.
    .
    If disabled we will not supply instances of `FunctorWithIndex`
    .
  default: True
  manual: True

source-repository head
  type: git
  location: git://github.com/ekmett/comonad.git

library
  hs-source-dirs: src
  default-language: Haskell2010
  ghc-options: -Wall

  build-depends:
    , base                >= 4.12 && < 5
    , tagged              >= 0.8.6.1 && < 1
    , transformers        >= 0.5 && < 0.7

  if flag(containers)
    build-depends: containers >= 0.3 && < 0.7

  if flag(indexed-traversable)
    build-depends: indexed-traversable >= 0.1.1 && < 0.2

  if impl(ghc >= 9.0)
    -- these flags may abort compilation with GHC-8.10
    -- https://gitlab.haskell.org/ghc/ghc/-/merge_requests/3295
    ghc-options: -Winferred-safe-imports -Wmissing-safe-haskell-mode

  exposed-modules:
    Control.Comonad
    Control.Comonad.Env
    Control.Comonad.Env.Class
    Control.Comonad.Hoist.Class
    Control.Comonad.Identity
    Control.Comonad.Store
    Control.Comonad.Store.Class
    Control.Comonad.Traced
    Control.Comonad.Traced.Class
    Control.Comonad.Trans.Class
    Control.Comonad.Trans.Env
    Control.Comonad.Trans.Identity
    Control.Comonad.Trans.Store
    Control.Comonad.Trans.Traced
    Data.Functor.Composition

  other-extensions:
    CPP
    DefaultSignatures
    DeriveDataTypeable
    DeriveGeneric
    FlexibleContexts
    FlexibleInstances
    FunctionalDependencies
    MultiParamTypeClasses
    PolyKinds
    RankNTypes
    Safe
    StandaloneDeriving
    Trustworthy
    UndecidableInstances
