name:          comonad-examples
category:      Control, Comonads
version:       0.1
license:       BSD3
cabal-version: >= 1.10
license-file:  LICENSE
author:        Edward A. Kmett
maintainer:    Edward A. Kmett <ekmett@gmail.com>
stability:     provisional
homepage:      http://github.com/ekmett/comonad/
bug-reports:   http://github.com/ekmett/comonad/issues
copyright:     Copyright (C) 2008-2014 Edward A. Kmett,
               Copyright (C) 2004-2008 Dave Menendez
synopsis:      Comonads
description:   Comonads.
build-type:    Simple
tested-with:   GHC == 7.0.4, GHC == 7.2.2, GHC == 7.4.2, GHC == 7.6.3, GHC == 7.8.4, GHC == 7.10.3, GHC == 8.0.2, GHC == 8.2.2, GHC == 8.4.4, GHC == 8.6.3

source-repository head
  type: git
  location: git://github.com/ekmett/comonad.git

library
  hs-source-dirs: .
  default-language: Haskell2010
  ghc-options: -Wall

  exposed-modules:
    History

  build-depends:
    base    >= 4 && < 5,
    comonad == 5.0.*
