cabal-version: 2.2
name:          comonad-examples
category:      Control, Comonads
version:       0.2
license:       BSD-2-Clause OR Apache-2.0
license-file:  LICENSE.md
author:        Edward A. Kmett
maintainer:    Edward A. Kmett <ekmett@gmail.com>
stability:     provisional
homepage:      http://github.com/ekmett/comonad/
bug-reports:   http://github.com/ekmett/comonad/issues
copyright:     Copyright (C) 2008-2014 Edward A. Kmett,
               Copyright (C) 2004-2008 Dave Menendez
synopsis:      Comonads
description:   Comonads.
build-type:    Simple
tested-with:   GHC == 8.6.5
             , GHC == 8.8.3
             , GHC == 8.10.1

source-repository head
  type: git
  location: git://github.com/ekmett/comonad.git
  subdir: examples

library
  hs-source-dirs: .
  default-language: Haskell2010
  ghc-options: -Wall

  exposed-modules:
    History

  build-depends:
    , base    >= 4 && < 5
    , comonad ^>= 6
